containers/kubernetes/samples/vendors/bare-metal/discovery-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-ingress
  namespace: zowe
  labels:
    app.kubernetes.io/name: zowe
    app.kubernetes.io/instance: zowe
    app.kubernetes.io/version: "3.0.0"
    app.kubernetes.io/component: discovery
    app.kubernetes.io/part-of: apiml
    app.kubernetes.io/managed-by: manual
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    # uncomment line 19&20 to fill in host, then comment out line 20
    # - host: <fill in here>
    #   http:
    - http: #comment out this line if uncommenting line 19&20
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discovery-service
                port:
                  name: discovery-port
